==> aws/amazon-freertos/vendors/ti/boards/cc3220_launchpad/ports/common_io/iot_uart.c <==
#include "Board.h"
#include "iot_uart.h"
#include <string.h>
#include <ti/devices/cc32xx/inc/hw_memmap.h>
#include <ti/devices/cc32xx/inc/hw_ints.h>
#include <ti/devices/cc32xx/inc/hw_types.h>
#include <ti/drivers/UART.h>
#include <ti/devices/cc32xx/driverlib/uart.h>
#include <ti/drivers/uart/UARTCC32XX.h>
#include "FreeRTOS.h"
#include "task.h"
#define IOT_USART_PORTS    ( 2 )
#define _getHWAttrs( tiUartHandle )      ( ( UARTCC32XX_HWAttrsV1 const * ) tiUartHandle->hwAttrs )
#define _isBusy( tiUartHandle )          ( MAP_UARTBusy( _getHWAttrs( tiUartHandle )->baseAddr ) || MAP_UARTCharsAvail( _getHWAttrs( tiUartHandle )->baseAddr ) )
#define _isIdle( tiUartHandle )          ( _isBusy( tiUartHandle ) == false )
#define _toUartHandle( tiUartHandle )    ( _getHWAttrs( tiUartHandle )->baseAddr == UARTA0_BASE ? pxUarts[ 0 ] : pxUarts[ 1 ] )

IotUARTHandle_t iot_uart_open( int32_t lUartInstance )
{
    /* If instance number is out of range. */
    if( ( lUartInstance < 0 ) && ( lUartInstance >= IOT_USART_PORTS ) )
    {
        return NULL;
    }

    /* If it is already open. */
    if( pxUarts[ lUartInstance ]->tiUartHandle != NULL )
    {
        return NULL;
    }

    IotUARTHandle_t xHandle = NULL;

    UART_init();

    pxUarts[ lUartInstance ]->tiUartHandle = UART_open( pxUarts[ lUartInstance ]->tiUartIndex, pxUarts[ lUartInstance ]->pTiUartParams );
    xHandle = pxUarts[ lUartInstance ]->tiUartHandle == NULL ? NULL : pxUarts[ lUartInstance ];

    return xHandle;
}

void iot_uart_set_callback( IotUARTHandle_t const uartHandle,
                            IotUARTCallback_t callback,
                            void * pUserCallbackContext )
{
    if( uartHandle != NULL )
    {
        uartHandle->uartCallback = callback;
        uartHandle->pUserCallbackContext = pUserCallbackContext;
    }
}

int32_t iot_uart_read_sync( IotUARTHandle_t const uartHandle,
                            uint8_t * const pBuffer,
                            size_t bytes )
{
    if( ( uartHandle == NULL ) || ( pBuffer == NULL ) || ( bytes == 0 ) || ( uartHandle->tiUartHandle == NULL ) )
    {
        return IOT_UART_INVALID_VALUE;
    }

    int32_t ret = IOT_UART_READ_FAILED;

    int_fast32_t readBytes = UART_readPolling( uartHandle->tiUartHandle, pBuffer, bytes );

    if( readBytes > 0 )
    {
        uartHandle->rxNoOfbytes = readBytes;
        ret = IOT_UART_SUCCESS;
    }

    return ret;
}

int32_t iot_uart_write_sync( IotUARTHandle_t const uartHandle,
                             uint8_t * const pBuffer,
                             size_t bytes )
{
    if( ( uartHandle == NULL ) || ( pBuffer == NULL ) || ( bytes == 0 ) || ( uartHandle->tiUartHandle == NULL ) )
    {
        return IOT_UART_INVALID_VALUE;
    }

    int32_t ret = IOT_UART_WRITE_FAILED;

    int_fast32_t writtenBytes = UART_writePolling( uartHandle->tiUartHandle, pBuffer, bytes );

    if( writtenBytes > 0 )
    {
        uartHandle->txNoOfbytes = writtenBytes;
        ret = IOT_UART_SUCCESS;
    }

    return ret;
}

int32_t iot_uart_read_async( IotUARTHandle_t const uartHandle,
                             uint8_t * const pBuffer,
                             size_t bytes )
{
    if( ( uartHandle == NULL ) || ( pBuffer == NULL ) || ( bytes == 0 ) || ( uartHandle->tiUartHandle == NULL ) )
    {
        return IOT_UART_INVALID_VALUE;
    }

    int32_t ret = IOT_UART_SUCCESS;

    if( UART_read( uartHandle->tiUartHandle, pBuffer, bytes ) < 0 )
    {
        ret = IOT_UART_READ_FAILED;
    }

    return ret;
}

int32_t iot_uart_write_async( IotUARTHandle_t const uartHandle,
                              uint8_t * const pBuffer,
                              size_t bytes )
{
    if( ( uartHandle == NULL ) || ( pBuffer == NULL ) || ( bytes == 0 ) || ( uartHandle->tiUartHandle == NULL ) )
    {
        return IOT_UART_INVALID_VALUE;
    }

    int32_t ret = IOT_UART_SUCCESS;

    if( UART_write( uartHandle->tiUartHandle, pBuffer, bytes ) < 0 )
    {
        ret = IOT_UART_WRITE_FAILED;
    }

    return ret;
}

int32_t iot_uart_close( IotUARTHandle_t const uartHandle )
{
    if( ( uartHandle == NULL ) || ( uartHandle->tiUartHandle == NULL ) )
    {
        return IOT_UART_INVALID_VALUE;
    }

    /* TI Driver requires to cancel on-going transfer before calling close. */
    iot_uart_cancel( uartHandle );

    UART_close( uartHandle->tiUartHandle );
    uartHandle->tiUartHandle = NULL;

    return IOT_UART_SUCCESS;
}

int32_t iot_uart_ioctl( IotUARTHandle_t const uartHandle,
                        IotUARTIoctlRequest_t uartRequest,
                        void * const pBuffer )
{
    if( ( uartHandle == NULL ) || ( pBuffer == NULL ) || ( uartHandle->tiUartHandle == NULL ) )
    {
        return IOT_UART_INVALID_VALUE;
    }

    int32_t ret = IOT_UART_SUCCESS;
    const UARTCC32XX_HWAttrsV1 * hwAttrs = _getHWAttrs( uartHandle->tiUartHandle );

    ClockP_FreqHz freq;
    ClockP_getCpuFreq( &freq );

    switch( uartRequest )
    {
        case eUartSetConfig:
           {
               if( _isBusy( uartHandle->tiUartHandle ) )
               {
                   ret = IOT_UART_BUSY;
                   break;
               }

               IotUARTConfig_t * pConfig = ( IotUARTConfig_t * ) pBuffer;
               unsigned long tiFlowMode = pConfig->ucFlowControl == 0 ? UART_FLOWCONTROL_NONE : UART_FLOWCONTROL_TX | UART_FLOWCONTROL_RX;
               unsigned long tiConfig = dataLength[ pConfig->ucWordlength - 5 ] | stopBits[ pConfig->xStopbits ] | parityType[ pConfig->xParity ];

               MAP_UARTFlowControlSet( hwAttrs->baseAddr, tiFlowMode );
               MAP_UARTConfigSetExpClk( hwAttrs->baseAddr, freq.lo, pConfig->ulBaudrate, tiConfig );

               break;
           }

        case eUartGetConfig:
           {
               IotUARTConfig_t * pConfig = ( IotUARTConfig_t * ) pBuffer;
               unsigned long baud = 0;
               unsigned long tiConfig = 0;
               unsigned long tiFlowMode = 0;

               tiFlowMode = MAP_UARTFlowControlGet( hwAttrs->baseAddr );
               MAP_UARTConfigGetExpClk( hwAttrs->baseAddr, freq.lo, &baud, &tiConfig );

               pConfig->ucFlowControl = tiFlowMode == UART_FLOWCONTROL_NONE ? 0 : 1;
               pConfig->ulBaudrate = baud;
               pConfig->ucWordlength = ( uint8_t ) _indexOf( dataLength, sizeof( dataLength ), ( tiConfig & UART_CONFIG_WLEN_MASK ) ) + 5;
               pConfig->xStopbits = ( IotUARTStopBits_t ) _indexOf( stopBits, sizeof( stopBits ), ( tiConfig & UART_CONFIG_STOP_MASK ) );
               pConfig->xParity = ( IotUARTParity_t ) _indexOf( parityType, sizeof( parityType ), ( tiConfig & UART_CONFIG_PAR_MASK ) );

               break;
           }

        case eGetTxNoOfbytes:
            *( uint16_t * ) pBuffer = uartHandle->txNoOfbytes;
            break;

        case eGetRxNoOfbytes:
            *( uint16_t * ) pBuffer = uartHandle->rxNoOfbytes;
            break;

        default:
            ret = IOT_UART_INVALID_VALUE;
            break;
    }

    return ret;
}

int32_t iot_uart_cancel( IotUARTHandle_t const uartHandle )
{
    if( ( uartHandle == NULL ) || ( uartHandle->tiUartHandle == NULL ) )
    {
        return IOT_UART_INVALID_VALUE;
    }

    if( _isIdle( uartHandle->tiUartHandle ) )
    {
        return IOT_UART_NOTHING_TO_CANCEL;
    }

    UART_writeCancel( uartHandle->tiUartHandle );
    UART_readCancel( uartHandle->tiUartHandle );

    /* Have to sleep for a short period to let cancel finish. */
    vTaskDelay( pdMS_TO_TICKS( 1000 ) );

    return IOT_UART_SUCCESS;
}
